# cortex

./: .env  .eslintignore  .gitignore  CHANGELOG.md  Cargo.toml  GitVersion.yml  README.md  SECURITY.md  components.json  eslint.config.js  flake.nix  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: cn420ds8y08pas2zf3j9lsipcl82k806-source
.github/: dependabot.yml
.github/workflows/: chromatic.yml  codeql.yml  release.yml  scorecard.yml  test.yml
.storybook/: main.ts  preview.ts  preview.tsx
src/: App.tsx  bindings.ts  buffer.rs  color.rs  editor.tsx  il8n.ts  main.rs  main.tsx  rectangle.rs  render.rs  routeTree.gen.ts  setup.rs  shaders.wgsl  sidebar.rs  size.rs  state.rs  style.ts  styles.css  types.ts
src-tauri/: .gitignore  :w  Cargo.toml  diesel.toml  tauri.conf.json  test.sh
src-tauri/.cargo/: mutants.toml
src-tauri/.sqlx/: query-00fcf179ea7b65f742b88fd4cba03aa5e4e8988074df1c1d30d04076d215ff83.json  query-0c7dcd022293dae46d7ae5325c3f9bce6f34ef33fe13e76df532638da1940b36.json  query-3af7aa12bf7d093851af6f37cbdb54359937ac23e760a5fd355201ef0220d0d1.json  query-4bec4a57634af1ffaeebce57767a09c84ed6db18565fe5826b5be1ec2f0399c8.json  query-73eede6d8ca25f8363afc703cc9992bd17d3b07c7b589cac4929d6e0133c9a2f.json
src-tauri/benches/: db_benchmark.rs
src-tauri/capabilities/: main.json
src-tauri/migrations/: 20240721214728_init.sql
src-tauri/migrations/2024-07-27-160503_create_notes/: up.sql
src-tauri/migrations/2024-10-01-180256_create_settings/: up.sql
src-tauri/migrations/2024-10-12-213704_add_tags/: down.sql  up.sql
src-tauri/migrations/2024-11-17-163046_create_things/: down.sql  up.sql
src-tauri/src/: lexical.rs  lib.rs  macros.rs  main.rs  models.rs  schema.rs  setup.rs  utils.rs
src-tauri/src/commands/: entity.rs  mod.rs  notes.rs  objects.rs  schema.rs  settings.rs  tags.rs
src-tauri/src/database/: add_entity.rs  attribute_getters.rs  attribute_schema.rs  attribute_type.rs  entity.rs  entity_schema.rs  entity_test.rs  field.rs  migration.rs  mod.rs  response_map.rs  test.rs
src-tauri/src/database/attribute/: delete_attribute.rs  get_attribute.rs  insert_attribute.rs  longform.rs  mod.rs
src-tauri/src/database/attribute_schema/: add_attribute_schema.rs  get_attribute_schema.rs  mod.rs  utils.rs
src-tauri/src/database/builder/: column.rs  foreign_key.rs  mod.rs  table.rs
src-tauri/src/database/entity/: add_entity.rs  delete_entity.rs  get.rs  get_entity.rs  mod.rs
src-tauri/src/database/entity_schema/: mod.rs
src-tauri/src/database/schema/: add.rs  mod.rs
src-tauri/src/db/: notes.rs  settings.rs
src-tauri/src/models/: attribute.rs  attribute_schema.rs  attribute_type.rs  entity.rs  entity_schema.rs  longform.rs  mod.rs  notes.rs  objects.rs  settings.rs  tags.rs  things.rs  time.rs
src-tauri/src/notes/: create.rs  entity.rs  get.rs  mod.rs  update.rs
src-tauri/src/search/: mod.rs
src-tauri/src/types/: column.rs  schema.rs
src/commands/: common.tsx  note.ts  note.tsx  objects.tsx  settings.tsx  tags.tsx
src/components/dialogs/: CreateNote.stories.tsx  CreateNote.tsx  CreateSchema.tsx  GenericCreate.tsx  Search.stories.tsx  Search.tsx
src/components/ui/: button-tooltip.stories.tsx  button-tooltip.tsx  button.stories.tsx  button.tsx  command.tsx  context-buttons.tsx  context-menu.tsx  dialog.tsx  form.tsx  input.stories.tsx  input.tsx  label.tsx  nav-button.tsx  note-link.tsx  popover.stories.tsx  popover.tsx  select.stories.tsx  select.tsx  tooltip.tsx
src/components/widgets/: Sidebar.stories.tsx  Sidebar.tsx  Topbar.tsx  WindowWrapper.tsx
src/elements/: NoteTags.tsx  PageNavigator.tsx  TableOfContents.tsx
src/i18n/: en.ts  index.tsx  ja.ts
src/nodes/: InternalLink.tsx
src/plugins/: AutoLink.tsx  ExternalLink.tsx  InternalLink.tsx  LinkCommon.tsx  WikiLink.tsx
src/routes/: Test.tsx  __root.tsx  index.lazy.tsx  objects.tsx  settings.tsx
src/routes/notes/: $noteId.tsx
src/routes/schemas/: $uuid.tsx  index.tsx
src/utils/: AutoLink.tsx  ExternalLink.tsx  InternalLink.tsx  WikiLink.tsx
