[package]
name = "Cortex"
version = "0.1.0"
edition = "2021"

[dependencies]
battery = "0.7.8"
bytemuck = { version = "1.21.0", features = ["derive"] }
encase = { version = "0.10.0", features = ["glam"] }
glam = "0.29.2"
glyphon = "0.7.0"
pollster = "0.4.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
wgpu = "23.0.1"
winit = { version = "0.29" }
