[package]
name = "cortex"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.0.6", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.41.1", features = ["macros"] }
uuid = { version = "1.11.0", features = ["v4"] }
chrono = "0.4.38"
tauri-plugin-fs = "2.0.3"
tauri-plugin-os = "2.0.1"
tauri-plugin-shell = "2.0.2"
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
thiserror = "2.0.3"
tantivy = "0.22.0"
regex = "1.11.1"
specta = { version = "=2.0.0-rc.20" }
tauri-specta = { version = "=2.0.0-rc.20", features = ["derive", "typescript"] }
specta-typescript = "0.0.7"
futures = "0.3.31"
rusqlite = "0.32.1"
r2d2_sqlite = "0.25.0"
r2d2 = "0.8.10"
serde_rusqlite = "0.36.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
