[package]
name = "cortex"
version = "1.0.0"
description = "A Tauri App"
authors = ["Alec Miller"]
edition = "2021"
default-run = "Cortex"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.41.1", features = ["macros"] }
uuid = { version = "1.11.0", features = ["v4"] }
chrono = "0.4.38"
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
thiserror = "2.0.3"
tantivy = "0.22.0"
regex = "1.11.1"
specta = { version = "=2.0.0-rc.20", features = ["serde", "serde_json"] }
specta-typescript = "0.0.7"
futures = "0.3.31"
rusqlite = { version = "0.32.1", features = ["array", "serde_json"] }
r2d2_sqlite = "0.25.0"
r2d2 = "0.8.10"
serde_rusqlite = "0.36.0"
iced = { version = "0.13.1", features = ["advanced"] }
iced_native = "0.10.3"
iced_core = "0.13.2"
pulldown-cmark = "0.12.2"
url = "2.5.4"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
iced_highlighter = "0.13.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "db_benchmark"
harness = false

[lib]
bench = true
test = true

[[bin]]
name = "Cortex"
path = "src/bin/main.rs"
