[package]
name = "cortex"
version = "1.0.0"
description = "A Tauri App"
authors = ["Alec Miller"]
edition = "2021"
default-run = "Cortex"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.42.0", features = ["macros"] }
uuid = { version = "1.11.0", features = ["v4"] }
chrono = "0.4.39"
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
thiserror = "2.0.6"
tantivy = "0.22.0"
regex = "1.11.1"
specta = { version = "=2.0.0-rc.20", features = ["serde", "serde_json"] }
specta-typescript = "0.0.7"
futures = "0.3.31"
rusqlite = { version = "0.32.1", features = ["array", "serde_json"] }
r2d2_sqlite = "0.25.0"
r2d2 = "0.8.10"
serde_rusqlite = "0.36.0"
pulldown-cmark = "0.12.2"
url = "2.5.4"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
winit = { version = "0.30", features = ["rwh_05"] }
wgpu = "23.0.1"
pollster = "0.4.0"
env_logger = "0.11.6"
wgpu-core = "23.0.1"
wgpu-types = "23.0.0"
log = "0.4.22"
wgpu-hal = "23.0.1"
wgpu_macros = "0.1.0"
glyphon = "0.7.0"
encase = "0.10.0"
glam = "0.29.2"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "db_benchmark"
harness = false

[lib]
bench = true
test = true

[[bin]]
name = "Cortex"
path = "src/bin/main.rs"
